--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">I'm an CS student who's interested in creating apps for desktop and mobile devices. Building new projects makes me think that programming require a lifetime of learning. I recognize every single day in which I can learn something as a good day.</p>
+          <p class="lead">I'm a CS student who's interested in creating apps for desktop and mobile devices. Building new projects makes me think that programming require a lifetime of learning. I recognize every single day in which I can learn something as a good day.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">I am common with C and JavaScript languages. I can use JQuery/CSS/HTML and DOM as well. Currently I develop some of my projects and my plan for the future is to become Front End developer.</p>
