--- a/index.html
+++ b/index.html
@@ -191,10 +191,22 @@
         <div class="col-lg-8 mx-auto">
           <!--  xoxoxoxox -->
           <form action="https://formspree.io/puyevesa@alltopmail.com" method="POST">
-  <input type="text" name="name">
-  <input type="email" name="_replyto">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <input type="text" name="name">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <input type="email" name="_replyto">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
   <input type="submit" value="Send">
 </form> 
+
         </div>
       </div>
 
