--- a/index.html
+++ b/index.html
@@ -189,23 +189,29 @@
       <!-- Contact Section Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <!--  xoxoxoxox -->
+<!--  xoxoxoxox -->
           <form action="https://formspree.io/puyevesa@alltopmail.com" method="POST">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <input type="text" name="name">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
             
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <input type="email" name="_replyto">
+                <label>Email Address</label>
+                <input class="form-control" id="email" type="email" name="_replyto" placeholder="e-mail" required="required" data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
-  <input type="submit" value="Send">
-</form> 
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Message</label>
+                <textarea type="text" name="name" class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <br>
+            <div id="success"></div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+            </div>
+          </form>
 
         </div>
       </div>
