--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 <!--  xoxoxoxox -->
-          <form action="https://formspree.io/puyevesa@alltopmail.com" method="POST">
+          <form action="https://formspree.io/dawilop749@student.polsl.pl" method="POST">
             
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Email Address</label>
-                <input class="form-control" id="email" type="email" name="_replyto" placeholder="e-mail" required="required" data-validation-required-message="Please enter your email address.">
+                <input class="form-control" id="email" type="email" name="_replyto" placeholder="Your E-mail" required="required" data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
