--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Email Address</label>
-                <input class="form-control" id="email" type="email" name="_replyto" placeholder="Your E-mail" required="required" data-validation-required-message="Please enter your email address.">
+                <input class="form-control" id="email" type="email" name="_replyto" placeholder="Your e-mail" required="required" data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
