--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <!-- Footer About Text -->
  
         <div class="col-lg-4">
-          <p class="lead mb-0">This particular page has been created using Bootstrap template with additional fonts and icons from fontawesome which let me improve the overall design. Projects above are result of my independent work.
+          <p class="lead mb-0">This particular page has been created using Bootstrap template with additional fonts and icons from fontawesome which let me improve the overall design. Projects from "MY PROJECTS" section are result of my independent work.
         </div>
 
         <!-- Footer Social Icons -->
