--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <i>Wheel Of Fortune</i>
                   </div>
                 </div>
-                <img class="img-fluid" src="img/portfolio/wheelof.png" alt="">
+                <img class="img-fluid" src="img/portfolio/wof.png" alt="">
               </div>
             </div>
     
