--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 4 -->
+        <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -150,6 +150,18 @@
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/mdb.png" alt="">
+          </div>
+        </div>
+
+        <!-- Portfolio Item 6 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i>Minesweeper</i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/saper.png" alt="">
           </div>
         </div>
     
@@ -548,7 +560,9 @@
                   <!-- Portfolio Modal - Image -->
                   <img class="img-fluid rounded mb-5" src="img/portfolio/mapi.png" alt="">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Created with OMDB API to enjoy seeking for your favourite movies, check IMDb scoring and read the plots.</p>
+                  <p class="mb-5">Created with OMDb API to enjoy seeking for your favourite titles. Check IMDb scoring and read the plots. <br>
+                    Link to imdb page with particular movie provided as well.
+                  </p>
                   <center><i class="fab fa-js fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-html5 fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-css3-alt fa-3x"></i></center>
                   <br>
                   <button class="btn btn-primary" onclick="
@@ -580,6 +594,70 @@
         </div>
       </div>
     </div>
+
+     <!-- Portfolio Modal 5 -->
+     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+          <div class="modal-body text-center">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-8">
+                  <!-- Portfolio Modal - Title -->
+                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Minesweeper</h2>
+                  <!-- Icon Divider -->
+                  <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+                  <!-- Portfolio Modal - Image -->
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/saperB.png" alt="">
+                  <!-- Portfolio Modal - Text -->
+                  <p class="mb-5">I recreated the classic with the help of Javascript so it's portable! Check out your brain in one of the most popular games ever created.
+                    You can choose between 3 difficulty levels. Be brave enough to solve the field with 100 bombs on it.<br> Rules are simple, left clicks releases current field,
+                    while right click flags it. To win you need to release all non-bomb fields. Can you do it?
+                  </p>
+                  <center><i class="fab fa-js fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-html5 fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-css3-alt fa-3x"></i></center>
+                  <br>
+                  <button class="btn btn-primary" onclick="
+  
+                  window.open(
+                    'https://dl769.github.io/minesweeper',
+                    '_blank' 
+                  );
+  
+                  " data-dismiss="modal">
+                      <i class="fas fa-globe"></i>
+                    Live Page
+                  </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <button class="btn btn-primary" onclick="
+  
+                  window.open(
+                    'https://github.com/dl769/minesweeper',
+                    '_blank' 
+                  );
+  
+                  "data-dismiss="modal">
+                    <i class="fab fa-github"></i>
+                    Githhub
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
   </div>
 
 
