--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
             <img class="img-fluid" src="img/portfolio/bmbios13.png" alt="">
           </div>
         </div>
+
+                <!-- Portfolio Item 8 -->
+                <div class="col-md-6 col-lg-4">
+                  <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white">
+                        <i>BlackJack</i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/blackjack.png" alt="">
+                  </div>
+                </div>
     
         </div>
   </section>
@@ -748,6 +760,67 @@
             </div>
           </div>
         </div>
+
+         <!-- Portfolio Modal 8 -->
+     <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-labelledby="portfolioModal8Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+          <div class="modal-body text-center">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-8">
+                  <!-- Portfolio Modal - Title -->
+                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">BlackJack</h2>
+                  <!-- Icon Divider -->
+                  <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+                  <!-- Portfolio Modal - Image -->
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/bjack.png" alt="">
+                  <!-- Portfolio Modal - Text -->
+                  <p class="mb-5">Simple casino game consisting of 2 stages: Firstly you need to put the stake in order to get into play. Next you should decide if you want to add a card or stand in order to be as close as possible to 21... If your amount is higher than your opponent, you win double stake. Try avoid bankruptcy!
+                  </p>
+                  <center><i class="fab fa-js fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-html5 fa-3x"></i>&nbsp;&nbsp;&nbsp;<i class="fab fa-css3-alt fa-3x"></i></center>
+                  <br>
+                  <button class="btn btn-primary" onclick="
+  
+                  window.open(
+                    'https://dl769.github.io/blackjack',
+                    '_blank' 
+                  );
+  
+                  " data-dismiss="modal">
+                      <i class="fas fa-globe"></i>
+                    Live Page
+                  </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <button class="btn btn-primary" onclick="
+  
+                  window.open(
+                    'https://github.com/dl769/blackjack',
+                    '_blank' 
+                  );
+  
+                  "data-dismiss="modal">
+                    <i class="fab fa-github"></i>
+                    Githhub
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     
   </div>
